# aviation_ner_sdr

./: README.md  evaluation_safety.py  finetune_NuNerZero.py  inference.py  ner_tokenization.py  pyproject.toml  requirements.txt  run_newnerzero.py
Dataset/BIO/: test.10.23.bio.json  train.10.23.bio.json
src/aviation_ner_sdr/: evaluation_safety.py  finetune_NuNerZero.py  streamlit_central.py
